fixing some spacing for the search bar

--- a/css/index.css
+++ b/css/index.css
@@ -333,6 +333,7 @@ html, body {
     .grid-card-container {
       /* display: grid; */
       display:flex;
+      justify-content: space-between;
       /* column-gap: 50px; */
       /* grid-template-columns: 1fr 3fr; */
       padding: 10px;
@@ -1229,4 +1230,17 @@ html, body {
 }
 .tooltip:hover .tooltiptext {
   visibility: visible;
+}
+
+.cardIcon{
+  width: 2.2vh;
+  margin-right: 0.4rem;
+}
+
+.maptn{
+ width:15vw;
+}
+
+.cardMain{
+  width: 40vw;
 }
